# omnifocus-operator

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOC-SUITE-ANALYSIS.md  Makefile  README.md  TMP-3.1-SPEC.md  UAT-SUITE-ANALYSIS.md  WIP  justfile  omnifocus-operator.code-workspace  pyproject.toml  setup_operator.py
.claude/: settings.json
.claude/hooks/: auto-format-python.sh
.github/workflows/: ci.yml  pages.yml  publish.yml
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  VALUE-PROPOSITION-NOTES.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.2.3-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4.1-MILESTONE-AUDIT.md
.planning/debug/: .continue-here.md  deferdate-timezone.md  inbox-subtask-visibility.md  missing-noop-warnings.md  noop-rep-rule-warning-lost.md  noop-warning-suppressed.md  note-field-encoding.md  note-null-rejected.md  ondates-silently-dropped.md  pagination-ordering-nondeterministic.md  pydantic-validation-leak.md  real-bridge-connection-failure.md  removetags-crash.md  repetition-rule-validation-failure.md  replace-tags-not-removing.md  tool-description-boundaries.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2.1-MILESTONE-AUDIT.md  v1.2.1-REQUIREMENTS.md  v1.2.2-MILESTONE-AUDIT.md  v1.2.2-REQUIREMENTS.md  v1.2.2-ROADMAP.md  v1.2.3-REQUIREMENTS.md  v1.2.3-ROADMAP.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.3.1-MILESTONE-AUDIT.md  v1.3.1-REQUIREMENTS.md  v1.3.1-ROADMAP.md  v1.3.2-MILESTONE-AUDIT.md  v1.3.2-REQUIREMENTS.md  v1.3.3-MILESTONE-AUDIT.md  v1.3.3-REQUIREMENTS.md  v1.3.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md  v1.4.1-MILESTONE-AUDIT.md  v1.4.1-REQUIREMENTS.md  v1.4.1-ROADMAP.md
.planning/notes/: 2026-03-17-dropped-repeating-task-completion.md
.planning/reports/: MILESTONE_SUMMARY-v1.0.md  MILESTONE_SUMMARY-v1.1.md  MILESTONE_SUMMARY-v1.2.1.md  MILESTONE_SUMMARY-v1.2.2.md  MILESTONE_SUMMARY-v1.2.3.md  MILESTONE_SUMMARY-v1.2.md  MILESTONE_SUMMARY-v1.3.1.md  MILESTONE_SUMMARY-v1.3.2.md  MILESTONE_SUMMARY-v1.3.3.md  MILESTONE_SUMMARY-v1.3.md  MILESTONE_SUMMARY-v1.4.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/seeds/: SEED-001-dropped-repeating-warning-accuracy.md  SEED-002-unified-bridge-response-envelope.md  SEED-003-bridge-protocol-review-for-direct-calls.md  SEED-004-adapter-silent-noop-violates-fail-fast.md  SEED-005-cli-adapter-and-marketing-reframe.md  SEED-006-marketing-landing-page-milestone.md
.planning/v1.4.2/: REVIEW.md
.research/: MILESTONE-2.md  MILESTONE-3.md
.research/Benchmark/: IDEAS.md  README.md  _common.js  run.py
.research/Original Spec/: MILESTONE-1.md  PROJECT-BRIEF.md  operatorBridgeScript.js
.research/benchmark/: README.md  run.py
.research/doc-suite-seeds/: v1.3.2.md
.research/original-spec/: MILESTONE-4.md  MILESTONE-5.md
.research/page/: PAGE.md  index.html
.research/uat-suite-seeds/: v1.3.1.md  v1.3.2-partial.md  v1.3.2.md  v1.4.1.md
.research/updated-spec/: DISCARDED-IDEAS.md  FUTURE-IDEAS.md  MAYBE-IDEAS.md  MILESTONE-v1.0.md  MILESTONE-v1.1.md  MILESTONE-v1.2.1.md  MILESTONE-v1.2.2.md  MILESTONE-v1.2.3.md  MILESTONE-v1.2.md  MILESTONE-v1.3.1.md  MILESTONE-v1.3.2.md  MILESTONE-v1.3.3.md  MILESTONE-v1.3.md  MILESTONE-v1.4.1.interview-notes.md  MILESTONE-v1.4.1.md  MILESTONE-v1.4.2.md  MILESTONE-v1.4.3.md  MILESTONE-v1.4.md  MILESTONE-v1.5.1.md  MILESTONE-v1.5.md  MILESTONE-v1.6.1.md  MILESTONE-v1.6.md  MILESTONE-v1.7.md  MILESTONE-v1.8.md  PROJECT-BRIEF.md
bridge/: package-lock.json  package.json
bridge/tests/: bridge.test.js  handleEditTask.test.js
docs/: architecture.md  audit-model-architecture.md  byday-edge-cases.md  configuration.md  index.html  model-taxonomy.md  omnifocus-concepts.md  repetition-rule-flow.md  structure-over-discipline.md
docs/js/: config-merger.js
src/omnifocus_operator/: __init__.py  __main__.py  config.py  middleware.py  repository.py  server.py  service.py  warnings.py
tests/: agent_messages_helpers.py  conftest.py  test_adapter.py  test_bridge.py  test_bridge_contract.py  test_bridge_only_repository.py  test_contracts_field_constraints.py  test_contracts_repetition_rule.py  test_contracts_smoke.py  test_contracts_type_aliases.py  test_cross_path_equivalence.py  test_date_filter_constants.py  test_date_filter_contracts.py  test_date_normalization.py  test_default_pagination.py  test_descriptions.py  test_due_soon_setting.py  test_errors.py  test_hybrid_repository.py  test_inherited_field_migration.py  test_ipc_engine.py  test_list_contracts.py  test_list_pipelines.py  test_middleware.py  test_models.py  test_output_schema.py  test_preferences.py  test_preferences_pipeline_integration.py  test_preferences_warnings_surfacing.py  test_projection.py  test_query_builder.py  test_real_bridge.py  test_repository.py  test_repository_factory.py  test_repository_repetition_rule.py  test_resolve_dates.py  test_rrule.py  test_rrule_schedule_inverse.py  test_server.py  test_service.py  (+14 more)
tests/doubles/: __init__.py  bridge.py  mtime.py  stub_bridge.py
tests/golden/: README.md  __init__.py  initial_state.json  normalize.py  scenario_02_add_task_with_parent.json  scenario_03_add_task_all_fields.json  scenario_05_edit_name.json  scenario_06_edit_note.json  scenario_07_edit_flagged.json  scenario_08_edit_dates.json  scenario_09_clear_dates.json  scenario_10_edit_estimated_minutes.json  scenario_11_add_tags.json  scenario_12_remove_tags.json  scenario_14_lifecycle_complete.json  scenario_15_lifecycle_drop.json
tests/golden_master/: README.md  __init__.py  normalize.py  test_task_property_surface_golden.py
uat/: README.md  capture_golden_master.py  tail-log-old.sh  tail-log.sh  test_model_overhaul.py  test_read_only.py  test_sqlite_reader.py
web/: package-lock.json  package.json
web/tests/: config-merger.test.js
(+1657 files in other folders)
