[project]
name = "omnifocus-operator"
version = "0.1.0"
description = "MCP server exposing OmniFocus as structured task infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
omnifocus-operator = "omnifocus_operator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=omnifocus_operator",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["omnifocus_operator"]
omit = [
    "*/simulator/__main__.py",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".research"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.ruff.format]
quote-style = "double"
