[project]
name = "omnifocus-operator"
version = "0.1.0"
description = "MCP server exposing OmniFocus as structured task infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.1.1",
    "pydantic-settings>=2.0",
]

[project.scripts]
omnifocus-operator = "omnifocus_operator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pre-commit>=4.0.0",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=omnifocus_operator",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore:Default value UNSET is not JSON serializable:pydantic.json_schema.PydanticJsonSchemaWarning",
]
markers = [
    "snapshot: seed InMemoryBridge with custom snapshot data (kwargs passed to make_snapshot_dict)",
    "hybrid_db: seed SQLite database for HybridRepository tests (kwargs passed to create_test_db)",
]

[tool.coverage.run]
source = ["omnifocus_operator"]
omit = [
    "*/simulator/__main__.py",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".research", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
# Intentional late imports: deferred so monkeypatch can intercept before binding
"src/omnifocus_operator/server.py" = ["PLC0415"]
"src/omnifocus_operator/repository/factory.py" = ["PLC0415"]
# Intentional late imports: the import IS the test (verifying importability / broken paths)
"tests/test_smoke.py" = ["PLC0415"]
"tests/test_bridge.py" = ["PLC0415"]
# Agent-facing descriptions are schema text — line length shouldn't constrain them
"src/omnifocus_operator/agent_messages/*" = ["E501"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates type annotations at runtime for validation/serialization.
# Tell ruff not to flag imports used in classes inheriting from these bases.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "omnifocus_operator.models.base.OmniFocusBaseModel",
    "omnifocus_operator.models.common.OmniFocusEntity",
    "omnifocus_operator.models.common.ActionableEntity",
    "omnifocus_operator.contracts.base.StrictModel",
    "omnifocus_operator.contracts.base.CommandModel",
    "omnifocus_operator.contracts.base.QueryModel",
]

[tool.ruff.format]
quote-style = "double"
exclude = ["src/omnifocus_operator/agent_messages/*"]
