[project]
name = "omnifocus-operator"
dynamic = ["version"]
description = "MCP server exposing OmniFocus as structured task infrastructure for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"
keywords = [
    "omnifocus",
    "mcp",
    "model-context-protocol",
    "task-management",
    "productivity",
    "ai-agent",
    "macos",
    "automation",
    "sqlite",
    "omnijs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=3.1.1",
    "pydantic-settings>=2.0",
]

[[project.authors]]
name = "Flo Kempenich"
email = "flo@kempenich.ai"

[project.urls]
Homepage = "https://hellothisisflo.github.io/omnifocus-operator"
Repository = "https://github.com/HelloThisIsFlo/omnifocus-operator"
Issues = "https://github.com/HelloThisIsFlo/omnifocus-operator/issues"

[project.scripts]
omnifocus-operator = "omnifocus_operator.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/omnifocus_operator/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/omnifocus_operator"]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "uat/",
    "docs/",
    ".planning/",
    ".github/",
    ".claude/",
    ".research/",
    ".sandbox/",
    "/bridge/",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pre-commit>=4.0.0",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 10
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--cov=omnifocus_operator",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
]
filterwarnings = [
    "ignore:Default value UNSET is not JSON serializable:pydantic.json_schema.PydanticJsonSchemaWarning",
]
markers = [
    "snapshot: seed InMemoryBridge with custom snapshot data (kwargs passed to make_snapshot_dict)",
    "hybrid_db: seed SQLite database for HybridRepository tests (kwargs passed to create_test_db)",
]

[tool.coverage.run]
source = ["omnifocus_operator"]
omit = [
    "*/simulator/__main__.py",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".research", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
# FastMCP resolves annotations via get_type_hints() — Context/FastMCP must stay runtime
"src/omnifocus_operator/server/handlers.py" = ["TC002"]
# Lifespan: imports deferred inside try/except → graceful degradation.
#
# Goal: any startup failure → ErrorOperatorService → server stays alive.
#
# How: all heavy imports live inside a try/except in app_lifespan().
#   - Errors can come from the imports themselves OR the calls
#   - try/except catches both → falls back to ErrorOperatorService
#   - If these were top-level, a failing import kills the module → no fallback
#
# Note: today these imports are pure Python and won't fail even without
# OmniFocus. But deferring them means we're covered if any module in the
# chain (bridge.real, repository, config) ever gains eager side-effects.
"src/omnifocus_operator/server/lifespan.py" = ["PLC0415"]
# Intentional late imports: deferred so monkeypatch can intercept before binding
"src/omnifocus_operator/repository/factory.py" = ["PLC0415"]
# Intentional late imports: the import IS the test (verifying importability / broken paths)
"tests/test_smoke.py" = ["PLC0415"]
# Agent-facing descriptions are schema text — line length shouldn't constrain them
"src/omnifocus_operator/agent_messages/*" = ["E501"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates type annotations at runtime for validation/serialization.
# Tell ruff not to flag imports used in classes inheriting from these bases.
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "omnifocus_operator.models.base.OmniFocusBaseModel",
    "omnifocus_operator.models.common.OmniFocusEntity",
    "omnifocus_operator.models.common.ActionableEntity",
    "omnifocus_operator.contracts.base.StrictModel",
    "omnifocus_operator.contracts.base.CommandModel",
    "omnifocus_operator.contracts.base.QueryModel",
]

[tool.ruff.format]
quote-style = "double"
exclude = ["src/omnifocus_operator/agent_messages/*"]
